# pybullet-coursework

./: .gitignore  creature.py  genome.py  pyproject.toml  realtime_from_csv.py  ref__direct_mode_test.py  ref__reimplement_direct_mode.py  run_ga_no_threads_cw.py  simulation.py  simulation_v2.py  temp0.urdf  test.urdf  test_ga_no_threads.py
